add bgm for height

--- a/audios/desktop.ini
+++ b/audios/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 244667__treyholton__demonic-laugh.mp3=@244667__treyholton__demonic-laugh,0
+331621__hykenfreak__flame-ignition.wav=@331621__hykenfreak__flame-ignition,0
